# KalshiMarketMaker

./: .env.example  .gitignore  README.md  config.yaml  mm.py  pyproject.toml  requirements.txt  runner.py  setup-private-repo.sh
kalshi_market_maker/: factories.py
kalshi_market_maker/cli/: dashboard.py
kalshi_market_maker/core/: avellaneda.py  kalshi_api.py
kalshi_market_maker/runtime/: dynamic.py  workers.py
kalshi_market_maker/selection/: scoring.py
tests/: test_avellaneda.py
